cmake_minimum_required (VERSION 3.8)

project ("ONNX-Debug")
set(OpenCV_DIR "C:/Users/mix/opencv-4.5.5/install/x64/vc16/lib")
find_package(OpenCV REQUIRED)
find_package(protobuf REQUIRED)
include_directories(include)
add_executable(main main.cpp)
add_definitions(-DHAVE_PROTOBUF)
target_link_libraries(main ${OpenCV_LIBS})